# ArgStance

./: README.md  pyproject.toml
src/: data_preprocess_stance.py  eval_stance.py  expandnrc_adapter.py  experiments.ipynb  train_stance.py
