[project]
name = "argstance"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Yeghaneh Abkenar",email = "Mohammad.YeghanehAbkenar@bdr.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
